# Splendor

./: LICENSE  README.md  pyproject.toml
data/: assets.py  constants.py
src/assets/game/: cards.py
