[project]
name = "splendor"
version = "0.1.0"
description = "Splendor is a strategic engine-building board game where players competing to acquire points through gem collection and card development."
authors = [
    {name = "Emanuel Raj",email = "emanuelraj.1999@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "3.11.9"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false